// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Row > borders > renders borderBottom 1`] = `
.c1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #636768;
}

.c0 {
  border-radius: 0;
  border-top: none;
  border-bottom: 1px solid #dad2c4;
  background-color: #f1e9dc;
  display: grid;
  grid-template-columns: auto 24px;
  padding: 16px;
  grid-gap: 16px;
  align-items: center;
  cursor: pointer;
}

.c0 .iconRight {
  justify-self: end;
}

@media (min-width: 768px) {
  .c0 {
    grid-gap: 24px;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class=""
      >
        <h1
          class="c1"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="c2"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > borders > renders borderTop 1`] = `
.c1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #636768;
}

.c0 {
  border-radius: 0;
  border-top: 1px solid #dad2c4;
  border-bottom: none;
  background-color: #f1e9dc;
  display: grid;
  grid-template-columns: auto 24px;
  padding: 16px;
  grid-gap: 16px;
  align-items: center;
  cursor: pointer;
}

.c0 .iconRight {
  justify-self: end;
}

@media (min-width: 768px) {
  .c0 {
    grid-gap: 24px;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class=""
      >
        <h1
          class="c1"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="c2"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > headings > renders bold heading 1`] = `
.c1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #636768;
}

.c0 {
  border-radius: 0;
  border-top: 1px solid #dad2c4;
  border-bottom: 1px solid #dad2c4;
  background-color: #f1e9dc;
  display: grid;
  grid-template-columns: auto 24px;
  padding: 16px;
  grid-gap: 16px;
  align-items: center;
  cursor: pointer;
}

.c0 h1 {
  font-weight: 500;
}

.c0 .iconRight {
  justify-self: end;
}

@media (min-width: 768px) {
  .c0 {
    grid-gap: 24px;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class=""
      >
        <h1
          class="c1"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="c2"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > headings > renders heading 1`] = `
.c1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #636768;
}

.c0 {
  border-radius: 0;
  border-top: 1px solid #dad2c4;
  border-bottom: 1px solid #dad2c4;
  background-color: #f1e9dc;
  display: grid;
  grid-template-columns: auto 24px;
  padding: 16px;
  grid-gap: 16px;
  align-items: center;
  cursor: pointer;
}

.c0 .iconRight {
  justify-self: end;
}

@media (min-width: 768px) {
  .c0 {
    grid-gap: 24px;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class=""
      >
        <h1
          class="c1"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="c2"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > headings > renders subHeading 1`] = `
.c1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #636768;
}

.c0 {
  border-radius: 0;
  border-top: 1px solid #dad2c4;
  border-bottom: 1px solid #dad2c4;
  background-color: #f1e9dc;
  display: grid;
  grid-template-columns: auto 24px;
  padding: 16px;
  grid-gap: 16px;
  align-items: center;
  cursor: pointer;
}

.c0 .iconRight {
  justify-self: end;
}

@media (min-width: 768px) {
  .c0 {
    grid-gap: 24px;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class=""
      >
        <h1
          class="c1"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="c2"
          cursor="inherit"
          title=""
        >
          a nice sub heading
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > icons > renders iconLeft 1`] = `
.c1 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  transform: rotate(0deg);
}

.c1 svg {
  color: #292924!important;
}

.c2 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c3 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #636768;
}

.c0 {
  border-radius: 0;
  border-top: 1px solid #dad2c4;
  border-bottom: 1px solid #dad2c4;
  background-color: #f1e9dc;
  display: grid;
  grid-template-columns: 24px auto 24px;
  padding: 16px;
  grid-gap: 16px;
  align-items: center;
  cursor: pointer;
}

.c0 .iconRight {
  justify-self: end;
}

@media (min-width: 768px) {
  .c0 {
    grid-gap: 24px;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <span
        class="c1"
        data-testid="info-container"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12 12-5.383 12-12S18.617 0 12 0zm-1 6.99a1 1 0 112 0c0 .553-.447 1.005-1 1.005-.553 0-1-.442-1-.995v-.01zM11 11a1 1 0 112 0v7a1 1 0 11-2 0v-7zm-9 1c0 5.514 4.486 10 10 10s10-4.486 10-10S17.514 2 12 2 2 6.486 2 12z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class=""
      >
        <h1
          class="c2"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="c3"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > icons > renders iconRight 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  transform: rotate(0deg);
}

.c3 svg {
  color: #9d927b!important;
}

.c1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #636768;
}

.c0 {
  border-radius: 0;
  border-top: 1px solid #dad2c4;
  border-bottom: 1px solid #dad2c4;
  background-color: #f1e9dc;
  display: grid;
  grid-template-columns: auto 24px;
  padding: 16px;
  grid-gap: 16px;
  align-items: center;
  cursor: pointer;
}

.c0 .iconRight {
  justify-self: end;
}

@media (min-width: 768px) {
  .c0 {
    grid-gap: 24px;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class=""
      >
        <h1
          class="c1"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="c2"
          cursor="inherit"
          title=""
        />
      </div>
      <span
        class="c3"
        data-testid="info-container"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12 12-5.383 12-12S18.617 0 12 0zm-1 6.99a1 1 0 112 0c0 .553-.447 1.005-1 1.005-.553 0-1-.442-1-.995v-.01zM11 11a1 1 0 112 0v7a1 1 0 11-2 0v-7zm-9 1c0 5.514 4.486 10 10 10s10-4.486 10-10S17.514 2 12 2 2 6.486 2 12z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</body>
`;

exports[`Row > type > renders curved last 1`] = `
.c1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #636768;
}

.c0 {
  border-radius: 0 0 16px 16px;
  border-top: 1px solid #dad2c4;
  border-bottom: none;
  background-color: #f1e9dc;
  display: grid;
  grid-template-columns: auto 24px;
  padding: 16px;
  grid-gap: 16px;
  align-items: center;
  cursor: pointer;
}

.c0 .iconRight {
  justify-self: end;
}

@media (min-width: 768px) {
  .c0 {
    grid-gap: 24px;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class=""
      >
        <h1
          class="c1"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="c2"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > type > renders curved type 1`] = `
.c1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #636768;
}

.c0 {
  border-radius: 16px;
  border-top: none;
  border-bottom: none;
  background-color: #f1e9dc;
  display: grid;
  grid-template-columns: auto 24px;
  padding: 16px;
  grid-gap: 16px;
  align-items: center;
  cursor: pointer;
}

.c0 .iconRight {
  justify-self: end;
}

@media (min-width: 768px) {
  .c0 {
    grid-gap: 24px;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class=""
      >
        <h1
          class="c1"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="c2"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > type > renders first type 1`] = `
.c1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  color: #636768;
}

.c0 {
  border-radius: 16px 16px 0 0;
  border-top: none;
  border-bottom: 1px solid #dad2c4;
  background-color: #f1e9dc;
  display: grid;
  grid-template-columns: auto 24px;
  padding: 16px;
  grid-gap: 16px;
  align-items: center;
  cursor: pointer;
}

.c0 .iconRight {
  justify-self: end;
}

@media (min-width: 768px) {
  .c0 {
    grid-gap: 24px;
  }
}

<body>
  <div>
    <div
      class="c0"
    >
      <div
        class=""
      >
        <h1
          class="c1"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="c2"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;
